# animator

./: .gitignore  README.md  pyproject.toml
docs/manim/: README.md
flask_app/: app.py
flask_app/generated_scripts/: 21cc2f84.py
flask_app/media/Tex/: 48fa9abe28d4f4fc.tex  79256bd784289ae5.tex  a114e41c3a0d9333.tex  ae4e42df25c48f9c.tex  b757ae7898de4c21.tex  e9d26e1272c12223.tex
flask_app/templates/: index.html
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: search-interface.tsx  skeleton-loader.tsx  video-qa-interface.tsx
generated_scripts/: 6e9d8cb4.py  8ba285af.py  a9c840a2.py  dcdd0713.py
manim_script/: generate_and_run.py  generated_scene.py
manim_script/media/Tex/: 9b1c35e89e1e9729.tex  f79676f8a6c343b9.tex
src/flask_app/: .Dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt  test_generate.py
src/flask_app/generated_scripts/: 07475312.py  0ab7f072.py  26a1ad83.py  4a5da4a3.py  8f393ea7.py
src/flask_app/media/Tex/: 2196325bc50dcf39.tex  3689c65af3fceb83.tex  59f67ac7e2837238.tex  ac5b874558c644ce.tex  c57ef0620ae3589f.tex  d522bc185654ffde.tex
src/flask_app/media/videos/07475312/480p15/partial_movie_files/MatrixMultiplication/: partial_movie_file_list.txt
src/flask_app/media/videos/8f393ea7/480p15/partial_movie_files/MatrixVectorMultiplication/: partial_movie_file_list.txt
src/flask_app/templates/: index.html
src/manim-service/: Dockerfile  README.md  hello_world.py  main.py  pyproject.toml  requirements.txt
sundai/animator/frontend/: README.md
(+11 files in other folders)
